# copilot-api-server

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: echo_client.py
src/: config.rs  error.rs  handlers.rs  main.rs  middleware.rs  prompt.rs  state.rs  streaming.rs  types.rs
