[package]
name = "copilot-api-server"
version = "0.1.0"
edition = "2021"
description = "OpenAI-compatible HTTP server backed by GitHub Copilot SDK"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust", branch = "main" }
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
